...
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="350dp"
                android:layout_height="41dp"
                android:layout_marginStart="5dp"
...
                android:hint="@string/place_holder"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myToolbar" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="49dp"
                android:layout_height="37dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/search"
                app:layout_constraintStart_toEndOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/myToolbar"
...
