...
    <string name="author">Created by farock natanael</string>
    <string name="error1">Error fetching track list: </string>
    <string name="error2">Error fetching data: </string>
    <string name="search">search</string>
    <string name="list">These are your favourite songs</string>
    <string name="view_list">View favourite list</string>
    <string name="place_holder">Please enter artist name</string>
    <string name="del">Delete Favourite Song</string>
    <string name="my_hint">song list goes here</string>




...
